--- a/SistemaVentas/src/main/java/administrador/FormProduct.form
+++ b/SistemaVentas/src/main/java/administrador/FormProduct.form
@@ -259,6 +259,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnCancel">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="33" red="33" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Regresar"/>
           </Properties>
           <Events>
