--- a/SistemaVentas/src/main/java/Principal/Login.form
+++ b/SistemaVentas/src/main/java/Principal/Login.form
@@ -326,6 +326,7 @@
               <Events>
                 <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cUserMousePressed"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cUserActionPerformed"/>
+                <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="cUserKeyPressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="cPassword">
